@@ -134,7 +134,7 @@ const UINT CPWToolBar::m_OtherIDs[] = {
   ID_MENUITEM_BACKUPSAFE,
   ID_MENUITEM_RESTORE,
   ID_MENUITEM_VALIDATE,
-  ID_MENUITEM_EXIT,       // main EXIT
+  ID_MENUITEM_EXIT,
   ID_MENUITEM_ABOUT,
   ID_MENUITEM_TRAYUNLOCK,
   ID_MENUITEM_TRAYLOCK,
@@ -144,7 +144,6 @@ const UINT CPWToolBar::m_OtherIDs[] = {
   ID_IMPORTMENU,
   ID_MENUITEM_CREATESHORTCUT,
   ID_MENUITEM_CUSTOMIZETOOLBAR,
-  ID_MENUITEM_EXIT_ST,     // SystemTray EXIT
   ID_MENUITEM_VKEYBOARDFONT
 };
 
@@ -205,7 +204,7 @@ const UINT CPWToolBar::m_OtherClassicBMs[] = {
   IDB_BACKUPSAFE_CLASSIC,
   IDB_RESTORE_CLASSIC,
   IDB_VALIDATE_CLASSIC,     // Yes, it is correct to be here twice!
-  IDB_EXIT_CLASSIC,         // main EXIT
+  IDB_EXIT_CLASSIC,
   IDB_ABOUT_CLASSIC,
   IDB_TRAYUNLOCK_CLASSIC,
   IDB_TRAYLOCK_CLASSIC,
@@ -215,7 +214,6 @@ const UINT CPWToolBar::m_OtherClassicBMs[] = {
   IDB_IMPORT_CLASSIC,
   IDB_CREATESHORTCUT_CLASSIC,
   IDB_CUSTOMIZETBAR_CLASSIC,
-  IDB_EXIT_CLASSIC,          // SystemTray EXIT
   IDB_CHANGEVKBDFONTMENU_CLASSIC
 };
 
@@ -315,7 +313,7 @@ const UINT CPWToolBar::m_OtherNewBMs[] = {
   IDB_BACKUPSAFE_NEW,
   IDB_RESTORE_NEW,
   IDB_VALIDATE_NEW,       // Yes, it is correct to be here twice!
-  IDB_EXIT_NEW,           // main EXIT
+  IDB_EXIT_NEW,
   IDB_ABOUT_NEW,
   IDB_TRAYUNLOCK_NEW,
   IDB_TRAYLOCK_NEW,
@@ -325,7 +323,6 @@ const UINT CPWToolBar::m_OtherNewBMs[] = {
   IDB_IMPORT_NEW,
   IDB_CREATESHORTCUT_NEW,
   IDB_CUSTOMIZETBAR_NEW,
-  IDB_EXIT_NEW,            // SystemTray EXIT
   IDB_CHANGEVKBDFONTMENU_NEW
 };
 
@@ -357,7 +354,6 @@ const UINT CPWToolBar::m_OtherNewDisBMs[] = {
   IDB_IMPORT_NEW_D,
   IDB_CREATESHORTCUT_NEW_D,
   IDB_CUSTOMIZETBAR_NEW,    // Don't need another disabled bitmap as never dispayed
-  IDB_EXIT_NEW_D,            // SystemTray EXIT
   IDB_CHANGEVKBDFONTMENU_NEW_D
 };
 
