@@ -258,7 +258,7 @@ BEGIN
         MENUITEM "C&lear Clipboard",            ID_MENUITEM_CLEARCLIPBOARD
         MENUITEM "&About Password Safe...",     ID_MENUITEM_ABOUT
         MENUITEM SEPARATOR
-        MENUITEM "E&xit",                       ID_MENUITEM_EXIT_ST
+        MENUITEM "E&xit",                       ID_MENUITEM_EXIT
     END
 END
 
