@@ -52,7 +52,6 @@ Do NOT change the value of any resource used in a menu from V3.17 onwards.
 #define ID_MENUITEM_COMPARE             32019
 #define ID_MENUITEM_PROPERTIES          32020
 #define ID_MENUITEM_EXIT                32021
-#define ID_MENUITEM_EXIT_ST             32022
 
 // Edit menu
 #define ID_EDITMENU                     32050
